--- a/_config.yml
+++ b/_config.yml
@@ -12,3 +12,5 @@ kramdown:
   syntax_highlighter_opts:
     # Use existing pygments syntax highlighting css
     css_class: 'highlight'
+
+highlighter: rouge
