--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # this means to ignore newlines until "twitter_username:"
   Functional Programming, Distributed Systems etc.
 
 # social links
-twitter_username: __jdiaz
+twitter_username: _jdiaz
 github_username:  jdiaz
 rss: rss
 # dribbble_username: jekyll
